--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,25 @@
 </head>
 
 <script type="text/javascript" src="index.js"></script>
+<script src="confetti.js"></script>
+<script>
 
+        // start
+
+        const start = () => {
+            setTimeout(function() {
+                confetti.start()
+            }, 1000); // 1000 is time that after 1 second start the confetti ( 1000 = 1 sec)
+        };
+
+        //  Stop
+
+        const stop = () => {
+            setTimeout(function() {
+                confetti.stop()
+            }, 5000); // 5000 is time that after 5 second stop the confetti ( 5000 = 5 sec)
+        };
+</script>
 <body class="siteContainer clockContainer">
 
 	<div class="siteContainer clockContainer">
